# cpp_game_programming_book

./: .gitignore
book_2/SDL_TEST01/: CMakeLists.txt
book_2/SDL_TEST01/include/: dynamicArray.hpp  game.hpp
book_2/SDL_TEST01/src/: dynamicArray.cpp  game.cpp  main.cpp
book_2/SDL_TEST02/: CMakeLists.txt
book_2/SDL_TEST02/include/: BGSpriteComponent.hpp  Math.hpp  actor.hpp  animeSpriteComponent.hpp  component.hpp  game.hpp  ship.hpp  spriteComponent.hpp  tileMapComponent.hpp
book_2/SDL_TEST02/src/: BGSpriteComponent.cpp  Math.cpp  actor.cpp  animeSpriteComponent.cpp  component.cpp  game.cpp  main.cpp  ship.cpp  spriteComponent.cpp  tileMapComponent.cpp
